@@ -4,6 +4,7 @@
 - added new base module: GWEN_RingBuffer; this module introduces a
   circular read/write buffer.
 - started cleaning up function names
+- added statistical functions to GWEN_RingBuffer
 
 
 2004/01/22: Martin Preuss<martin@libchipcard.de>
